Backend code completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/movie_db?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.database=${DB_NAME}
+spring.datasource.url=${DB_CONN_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.properties.hibernate.dialect = ${JPA_DIALECT_CLASS}
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
