--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/lodash": "^4.14.106",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.5",
+    "ng4-loading-spinner": "^1.1.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
