--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect = ${JPA_DIALECT_CLASS}
 spring.jpa.properties.hibernate.format_sql = true
+server.address=0.0.0.0
+server.port=8080
