--- a/UserServices/src/main/resources/application.properties
+++ b/UserServices/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost:3306/movieDb
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${MYSQL_CI_URL}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.format_sql = true
 server.address=0.0.0.0
