--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,11 +7,10 @@ stages:
 services:
  - 'mysql:5.5'
 variables:
- MYSQL_DATABASE: movieDb
- MYSQL_CI_URL: jdbc:mysql://mysql/movieDb
- MYSQL_USER: app-root
- MYSQL_ROOT_PASSWORD: root123
- MYSQL_PASSWORD: root123
+ MYSQL_DATABASE: moviedb
+ MYSQL_CI_URL: jdbc:mysql://mysql/moviedb
+ MYSQL_USER: root
+ MYSQL_ROOT_PASSWORD: root
 cache:
  paths:
   - .m2/repository/
