--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,15 @@
 image: 'maven:3-jdk-8'
-before_script:
- - source ./project.sh
 stages:
  - test
  - build
 services:
  - 'mysql:5.5'
 variables:
- MYSQL_DATABASE: moviedb
- MYSQL_CI_URL: jdbc:mysql://mysql/moviedb
- MYSQL_USER: root
- MYSQL_ROOT_PASSWORD: root
+ MYSQL_DATABASE: movieDb
+ MYSQL_CI_URL: jdbc:mysql://mysql/movieDb
+ MYSQL_USER: app-root
+ MYSQL_ROOT_PASSWORD: root123
+ MYSQL_PASSWORD: root123
 cache:
  paths:
   - .m2/repository/
